Lookup CLang++ path for setting compiler.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@
 # OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-cmake_minimum_required (VERSION 3.15)
+cmake_minimum_required (VERSION 3.19)
 if(POLICY CMP0015)
 	cmake_policy(SET CMP0015 NEW)
 endif()
@@ -38,7 +38,14 @@ if(POLICY CMP0056)
 	cmake_policy(SET CMP0056 NEW)
 endif()
 
-set (CMAKE_CXX_COMPILER "clang++")
+execute_process (
+	COMMAND which clang++
+	OUTPUT_VARIABLE CLANGPATH
+	OUTPUT_STRIP_TRAILING_WHITESPACE
+	COMMAND_ERROR_IS_FATAL ANY
+)
+
+set (CMAKE_CXX_COMPILER "${CLANGPATH}")
 
 project (hoard CXX)
 
